--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -7,14 +7,13 @@
 .white-block {
 	position: absolute;
 	height: 40px;
-	width: 60px;
+	width: 60%;
 	background-color: $pure-white;
 
 	&-left {
 		bottom: 0;
 		left: -50px;
 		transform: skew(45deg);
-		background-color: red;
 	}
 
 	&-right {
@@ -33,7 +32,7 @@
 	&::before {
 		display: block;
 		content: '';
-		position: relative;
+		position: absolute;
 		top: 0;
 		left: 0;
 		width: 100%;
