--- a/sass/main.scss
+++ b/sass/main.scss
@@ -116,6 +116,18 @@ body {
 	}
 }
 
+@keyframes navItemsAnimation {
+	from {
+		transform: translateX(200%);
+	}
+
+	to {
+		transform: translateX(0);
+	}
+}
+.nav-items-animation {
+	animation: navItemsAnimation 1s both;
+}
 //header
 .header {
 	position: relative;
@@ -159,10 +171,61 @@ body {
 	}
 }
 
+// MAIN
+// DREAMS SECTION
+.dreams {
+	&__box {
+		display: flex;
+		flex-direction: column;
+		margin: 2em 0;
+	}
+
+	&__img {
+		width: 100%;
+		margin-bottom: 1em;
+	}
+
+	&__title {
+		margin-bottom: 0.5em;
+	}
+
+	&__text {
+		font-size: 1.4rem;
+	}
+}
+
 //------------------------------------------------
 // MEDIA MEDIA MEDIA MEDIA MEDIA MEDAI MEDIA MEDIA
 //------------------------------------------------
+@media (min-width: 576px) {
+	.dreams {
+		&__box {
+			flex-direction: row;
+			justify-content: space-between;
 
+			&-text {
+				width: 55%;
+
+				&--right {
+					text-align: right;
+				}
+			}
+
+			&-img {
+				width: 40%;
+
+				&--right {
+					order: 1;
+				}
+			}
+		}
+
+		&__img {
+			margin-bottom: 0;
+			max-height: 300px;
+		}
+	}
+}
 @media (min-width: 768px) {
 	.white-block {
 		height: 50px;
@@ -180,6 +243,18 @@ body {
 			font-size: 1.6rem;
 		}
 	}
+
+	.dreams {
+		&__text {
+			font-size: 1.8rem;
+		}
+	}
+
+	.nav {
+		&__item {
+			font-size: 4.8rem;
+		}
+	}
 }
 
 @media (min-width: 992px) {
@@ -192,6 +267,22 @@ body {
 		background-image: $blue-gradient, url('/img/palm-3172367_1920.jpg');
 		&__heading {
 			font-size: 10rem;
+		}
+	}
+	.dreams {
+		&__box {
+			margin: 5em 0;
+			&-text {
+				display: flex;
+				flex-direction: column;
+				justify-content: flex-end;
+			}
+		}
+		&__title{
+			font-size: 3.6rem;
+		}
+		&__text{
+			font-size: 2.2rem;
 		}
 	}
 }
