created our website

--- a/sass/main.css
+++ b/sass/main.css
@@ -191,13 +191,18 @@ body {
   animation: navItemsAnimation 1s both;
 }
 
+.black-bars-color,
+.black-bars-color::after,
+.black-bars-color::before {
+  background-color: #2e2e2e;
+}
+
 .header {
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   padding: 2em;
   height: 75vh;
   text-align: center;
