--- a/sass/main.scss
+++ b/sass/main.scss
@@ -128,6 +128,14 @@ body {
 .nav-items-animation {
 	animation: navItemsAnimation 1s both;
 }
+
+.black-bars-color,
+.black-bars-color::after,
+.black-bars-color::before {
+	background-color: $dark;
+}
+
+
 //header
 .header {
 	position: relative;
@@ -135,7 +143,6 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	flex-direction: column;
 	padding: 2em;
 	height: 75vh;
 	text-align: center;
@@ -672,7 +679,7 @@ body {
 		}
 		&__box-list-item {
 			margin-bottom: 1em;
-			a{
+			a {
 				color: $light-white;
 				text-decoration: none;
 			}
